--- a/kairos/scheduling/templates/1-admin/navbar-admin.html
+++ b/kairos/scheduling/templates/1-admin/navbar-admin.html
@@ -1,22 +1,31 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#">Mi sitio web</a>
+      <a class="navbar-brand" href="{% url 'home_admin' %}">KAIROS LOGISTICS - ADMIN</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link" href="{% url 'create_user' %}">| Crear usuario |</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Acerca de</a>
+            <a class="nav-link" href="{% url 'delete_user' %}">| Eliminar usuario |</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Servicios</a>
+            <a class="nav-link" href="{% url 'see_schedules' %}">| Ver turnos |</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="{% url 'asign_turns' %}">| Asignar turnos |</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'modify_schedules' %}">| Modificar turnos |</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'block_schedule' %}">| Bloquear horarios |</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'validate_service_provided' %}">| Validar servicios |</a>
           </li>
         </ul>
       </div>
