Añadidos filtros para el reporte

--- a/kairos/scheduling/templates/0-1-block_schedule.html
+++ b/kairos/scheduling/templates/0-1-block_schedule.html
@@ -1,4 +1,4 @@
-{% extends '../base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}
     Bloquear horarios
@@ -15,7 +15,5 @@
 {% endblock %}
 
 {% block content %}
-    <div>
-        Block schedule
-    </div>
+
 {% endblock %}
