--- a/kairos/scheduling/templates/0-reports.html
+++ b/kairos/scheduling/templates/0-reports.html
@@ -36,6 +36,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/locales/bootstrap-datepicker.es.min.js" charset="UTF-8"></script>
 
+<!--Bootstrap multiple select-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/css/bootstrap-select.min.css"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/js/bootstrap-select.min.js"></script>
 
 <div class="bootstrap-iso">
     <div class="container-fluid">
@@ -46,8 +49,7 @@
                     <form method="post">
                         <div class="form-group">
                             <label class="control-label fw-bold">CVS</label>
-                            <select name='cvs'class="form-select" aria-label="">
-                                <option selected>Seleccione los CVS...</option>
+                            <select id="cvsChosen" name="cvsChosen" class="form-control selectpicker" multiple data-live-search="true" placeholder="Seleccione los CVS...">
                                 <option value="1">One</option>
                                 <option value="2">Two</option>
                                 <option value="3">Three</option>
