--- a/kairos/scheduling/templates/1-2-asign_turns.html
+++ b/kairos/scheduling/templates/1-2-asign_turns.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block title %}
-    Ver horarios
+    Asignar turnos
 {% endblock %}
 
 <!-- Selecting navbar -->
@@ -46,21 +46,9 @@
                 <div class="form-floating">
                     <select class="form-select" id="sc-select" name="sc-select" aria-label="select cvs">
                         <option selected>{{cvsName}}</option><!--for this item we cannot put accents - or change BBDD-->
-                        <!-- posible optimización para nombres... requiere más procesamiento -->
-                        <option value="BARRANQUILLA">BARRANQUILLA</option>
-                        <option value="BOGOTA FONTIBON">BOGOTA FONTIBON</option>
-                        <option value="BOGOTA NORTE">BOGOTA NORTE</option>
-                        <option value="BOGOTA SUR">BOGOTA SUR</option>
-                        <option value="BUCARAMANGA">BUCARAMANGA</option>
-                        <option value="CALI">CALI</option>
-                        <option value="CARTAGENA">CARTAGENA</option>
-                        <option value="DUITAMA">DUITAMA</option>
-                        <option value="IBAGUE">IBAGUE</option>
-                        <option value="MEDELLIN LA 65">MEDELLIN LA 65</option>
-                        <option value="MONTERIA">MONTERIA</option>
-                        <option value="NEIVA">NEIVA</option>
-                        <option value="PEREIRA">PEREIRA</option>
-                        <option value="VILLAVICENCIO">VILLAVICENCIO</option>
+                        {% for cvs in listCVSs %}
+                        <option value="{{cvs}}">{{cvs}}</option>
+                        {% endfor %}
                     </select>
                     <label for="sc-select">Visualizando horario de:</label>
                 </div>
@@ -75,7 +63,7 @@
                 <input type="hidden" name="cvsName" value="{{cvsName}}">
                 <h2>Datos del servicio</h2>
                 <div class="form-floating">
-                    <select class="form-select" id="typeTire" name="typeTire" aria-label="select type tire">
+                    <select class="form-select" id="typeTire" name="typeTire" aria-label="select type tire" required>
                         <option selected></option>
                         <!-- posible optimización para nombres... requiere más procesamiento -->
                         <option value="1">Automóvil</option>
@@ -85,7 +73,7 @@
                     <label for="typeTire">Tipo de llanta</label>
                 </div>
                 <div class="form-floating">
-                    <input class="form-control" type="number" name="quantity" id="quantity">
+                    <input class="form-control" type="number" name="quantity" id="quantity" required>
                     <label for="quantity">Cantidad llantas</label>
                 </div>                   
                 <div>
@@ -93,7 +81,7 @@
                     <label class="form-check-label" for="rotation">Rotación</label>
                 </div>
                 <div class="form-floating" >
-                    <input class="form-control" type="number" name="quantityRotate" id="quantityRotate" style="display: none;">
+                    <input class="form-control" type="number" name="quantityRotate" id="quantityRotate" style="display: none;" value="0" required>
                     <label for="quantityRotate" id="label-quantityRotate" style="display: none;">Cantidad llantas</label>
                 </div>
                 <script>
@@ -104,7 +92,6 @@
                         }
                         else{
                             document.getElementById(dchecked1).style.display = "none";
-                            document.getElementById(dchecked1).style.value = "0";
                             document.getElementById(dchecked2).style.display = "none";
                         }
                     }
