--- a/kairos/scheduling/templates/base.html
+++ b/kairos/scheduling/templates/base.html
@@ -30,7 +30,7 @@
     {% endblock %}
 
     {% for message in messages %}
-        <div class="alert alert-dismissible alert-primary d-flex justify-content-center" role="alert">
+        <div class="m-0 alert alert-dismissible alert-warning d-flex justify-content-center" role="alert">
         {{ message }}
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
