Arreglos al excel y a los filtros

--- a/kairos/scheduling/templates/0-reports.html
+++ b/kairos/scheduling/templates/0-reports.html
@@ -78,7 +78,7 @@
                 </div>    
             </div>
             <div class="panel-footer">
-                <a href="{% url 'excel' %}">Generar reporte</a>
+                <a class="btn btn-lg px-3 btn-outline-dark" role="button" href="{% url 'excel' %}">Generar reporte</a>
             </div>
         </div>
     </div>
