trabajando en el front

--- a/kairos/scheduling/templates/0-1-create_user.html
+++ b/kairos/scheduling/templates/0-1-create_user.html
@@ -53,6 +53,17 @@
                         <option value="3">Operario</option>
                     </select>
                 </div>
+
+                <div class="form__field form__field--4">
+                    <label class="form__rol-label form-label" for="input-rol">CVS</label>
+                    <br>
+                    <select name="rol" required>
+                        <option value="0">Med</option>
+                        <option value="1">Bog</option>
+                        <option value="2">ETC</option>
+                        <option value="3">ETC</option>
+                    </select>
+                </div>
     
                 <div class="form__field form__field--5">
                     <label class="form__email-label form-label" for="input-email">Correo</label>
@@ -72,6 +83,12 @@
                     {{form.password2}}
                 </div>
                 
+                <div class="form__field form__field--5">
+                    <label class="form__email-label form-label" for="input-email">Ingrese su contraseña de administrador</label>
+                    <input type="password" placeholder="Contraseña administrador" id="typePasswordX" class="form-control form-control-lg" name="password" />
+                    <br>
+                </div>
+
                 <br>
                 <div class="form__field form__field--9 text-center my-0">
                     <button class="form__button btn btn-primary btn-lg btn-outline-light" type="submit">Enviar</button>
