Trabajo en el front y en el back de crear usuarios

--- a/kairos/scheduling/templates/0-1-create_user.html
+++ b/kairos/scheduling/templates/0-1-create_user.html
@@ -54,16 +54,14 @@
                     </select>
                 </div>
 
-                <div class="form__field form__field--4">
+                <!-- <div class="form__field form__field--4">
                     <label class="form__rol-label form-label" for="input-rol">CVS</label>
                     <br>
-                    <select name="rol" required>
-                        <option value="0">Med</option>
-                        <option value="1">Bog</option>
-                        <option value="2">ETC</option>
-                        <option value="3">ETC</option>
+                    <select name="cvs" required>
+                        <option value="0">Medellín</option>
+                        <option value="1">Bogotá</option>
                     </select>
-                </div>
+                </div> -->
     
                 <div class="form__field form__field--5">
                     <label class="form__email-label form-label" for="input-email">Correo</label>
@@ -81,12 +79,6 @@
                     <label class="form__confirm-password-label form-label" for="input-confirm-password">Confirmar contraseña</label>
                     <br>
                     {{form.password2}}
-                </div>
-                
-                <div class="form__field form__field--5">
-                    <label class="form__email-label form-label" for="input-email">Ingrese su contraseña de administrador</label>
-                    <input type="password" placeholder="Contraseña administrador" id="typePasswordX" class="form-control form-control-lg" name="password" />
-                    <br>
                 </div>
 
                 <br>
