--- a/kairos/scheduling/templates/base.html
+++ b/kairos/scheduling/templates/base.html
@@ -39,17 +39,15 @@
     {% block content %}
 
     {% endblock %}
-
-    <footer class="bg-light text-center text-lg-start">
+    
+    <footer class="text-center text-lg-start">
+      <div style="background-color: #fafafa;">
         <div class="container p-4">
           <div class="row">
             <div class="col-lg-6 col-md-12 mb-4 mb-md-0 text-center">
-              <h5 class="text-uppercase">Footer Content</h5>
-      
+              <h5 class="text-uppercase">Kairos Logistics</h5>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste atque ea quis
-                molestias. Fugiat pariatur maxime quis culpa corporis vitae repudiandae
-                aliquam voluptatem veniam, est atque cumque eum delectus sint!
+                Somos una marca de Autofax SA, empresa con más de 35 años de experiencia en el mercado de llantas en Colombia. Somos importadores exclusivos de importantes marcas como Linglong, Goldshield, Otani, Speedways, Durtek, Raptor y Armour, así como comercializadores de las marcas Bridgestone y Firestone
               </p>
             </div>
       
@@ -58,25 +56,35 @@
       
               <ul class="list-unstyled">
                 <li>
-                  <a href="#!" class="text-dark">Link 1</a>
+                  <a href="https://www.facebook.com/eligellantascolombia/" class="text-dark">Facebook</a>
                 </li>
                 <li>
-                  <a href="#!" class="text-dark">Link 2</a>
+                  <a href="https://www.instagram.com/eligellantascolombia/" class="text-dark">Instagram</a>
                 </li>
                 <li>
-                  <a href="#!" class="text-dark">Link 3</a>
+                  <a href="https://www.youtube.com/channel/UCKdhIojeYCCOSrGagOxi4ow" class="text-dark">YouTube</a>
                 </li>
                 <li>
-                  <a href="#!" class="text-dark">Link 4</a>
+                  <a href="https://eligellantas.com/sobre-nosotros/" class="text-dark">Elige llantas</a>
                 </li>
               </ul>
             </div>
           </div>
         </div>
-      
+      </div>
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
           © 2023 Kairos Logistics
         </div>
     </footer>      
 </body>
 </html>
+
+<style>
+  footer {
+    width: 100%;
+    height: 81px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
+</style>
