--- a/kairos/scheduling/templates/0-manager/navbar-manager.html
+++ b/kairos/scheduling/templates/0-manager/navbar-manager.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'reports' %}">KAIROS LOGISTICS - GERENTE</a>
+      <a class="navbar-brand" href="{% url 'home_manager' %}">KAIROS LOGISTICS - GERENTE</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -17,6 +17,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'block_schedule' %}">Bloquear horarios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Salir</a>
           </li>
         </ul>
       </div>
