--- a/kairos/scheduling/templates/1-admin/navbar-admin.html
+++ b/kairos/scheduling/templates/1-admin/navbar-admin.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'see_schedules' %}">KAIROS LOGISTICS - ADMIN</a>
+      <a class="navbar-brand" href="{% url 'home_admin' %}">KAIROS LOGISTICS - ADMIN</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -26,6 +26,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'validate_service_provided' %}">Validar servicios</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Salir</a>
           </li>
         </ul>
       </div>
