--- a/kairos/scheduling/templates/2-adviser/navbar-adviser.html
+++ b/kairos/scheduling/templates/2-adviser/navbar-adviser.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
-    <a class="navbar-brand" href="{% url 'see_schedules' %}">KAIROS LOGISTICS - ASESOR COMERCIAL</a>
+    <a class="navbar-brand" href="{% url 'home_adviser' %}">KAIROS LOGISTICS - ASESOR COMERCIAL</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -11,6 +11,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'asign_turns' %}">Asignar turnos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'logout' %}">Salir</a>
         </li>
       </ul>
     </div>
