--- a/kairos/scheduling/templates/2-adviser/home-adviser.html
+++ b/kairos/scheduling/templates/2-adviser/home-adviser.html
@@ -9,7 +9,15 @@
 {% endblock %}
 
 {% block content %}
-    <div>
-        Adviser
+<div class="container my-5">
+    <div class="row">
+      <div class="col-md-6">
+        <h1>Bienvenido a la aplicación de agendamiento de turnos de Kairos logistics</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci ea ratione perferendis, natus reprehenderit ipsa porro deleniti ducimus, magnam dolorum dolore distinctio. Deserunt, libero recusandae ipsa neque voluptatum iure odio!</p>
+      </div>
+      <div class="col-md-6">
+        <img src="https://via.placeholder.com/500x300" alt="Imagen de ejemplo" class="img-fluid">
+      </div>
     </div>
+  </div>
 {% endblock %}
