--- a/kairos/scheduling/templates/base.html
+++ b/kairos/scheduling/templates/base.html
@@ -24,7 +24,7 @@
     {% endblock %}
     </title>
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     {% block navbar %}
 
     {% endblock %}
@@ -40,11 +40,11 @@
 
     {% endblock %}
     
-    <footer class="text-center text-lg-start">
+    <footer class="text-center text-lg-start mt-auto">
       <div style="background-color: #fafafa;">
         <div class="container p-4">
           <div class="row">
-            <div class="col-lg-6 col-md-12 mb-4 mb-md-0 text-center">
+            <div class="col-lg-6 col-md-12 mb-4 mb-md-0 tex t-center">
               <h5 class="text-uppercase">Kairos Logistics</h5>
               <p>
                 Somos una marca de Autofax SA, empresa con más de 35 años de experiencia en el mercado de llantas en Colombia. Somos importadores exclusivos de importantes marcas como Linglong, Goldshield, Otani, Speedways, Durtek, Raptor y Armour, así como comercializadores de las marcas Bridgestone y Firestone
@@ -78,13 +78,3 @@
     </footer>      
 </body>
 </html>
-
-<style>
-  footer {
-    width: 100%;
-    height: 81px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
-</style>
