--- a/kairos/scheduling/templates/1-2-asign_turns.html
+++ b/kairos/scheduling/templates/1-2-asign_turns.html
@@ -3,7 +3,7 @@
 
 {% block styles %}
 <link rel="stylesheet" href="{% static 'schedules.css'%}">
-<link rel="stylesheet" href="{% static 'asign_turns.css'%}">
+<link rel="stylesheet" href="{% static 'sel_mod_turns.css'%}">
 {% endblock %}
 
 {% block title %}
